made changes based on class notes

--- a/alpha/index.html
+++ b/alpha/index.html
@@ -13,25 +13,27 @@
 <body>
 
     <div>
+        <h1>Microinteraction Alpha IDM241</h1>
         <h3>URL:</h3>
         <p>https://one.drexel.edu/web/university/academics (as a teacher the portal probably appears different)</p>
 
         <h3>Current State Intro:</h3>
-        <p>In its current state the schedule an appointment button has no micro interaction. it currently has no hover state or on click interaction which makes this an ideal candidate for a simple microinteraction.</p>
+        <p>In its current state the schedule an appointment button only changes the mouse pointer to a clicker. It currently has no hover state or on click interaction which makes this an ideal candidate for a simple microinteraction.</p>
         <h3>Current State Images:</h3>
         <img src='images/drexel_academics.png' class="resize">
         <img src='images/schedule.png' class="resize">
 
         <h3>Triggers:</h3>
-        <p>while the mouse hovers over the button it starts the microinteraction and when the mouse either leaves the button or clicks the interaction stops</p>
+        <p>While the mouse hovers over the button it starts the microinteraction and when the mouse leaves the button the interaction stops.</p>
+
         <h3>Rules:</h3>
-        <p>While mouse hovers the button should change color and text color. I was thinking a drexel gold and navy text should work well.</p>
+        <p>While mouse hovers the button should change color and text color. A Drexel gold and navy text should work well. When mouse stops hovering it should transition back to the original color</p>
 
         <h3>Feedback:</h3>
-        <p>The user will see the button change color seamlessly from the current blue to gold and the text color change so there is solid contrast between button color and text color. </p>
+        <p>On hover the user will see the button change color seamlessly from the current blue to gold and the text color change so there is solid contrast between button color and text color. It will blend between colors over time so it isnt just one color changing to the other. </p>
 
         <h3>Loops and Modes</h3>
-        <p>The only loop that i can think of is the hover state, while the mouse is hovering the microinteraction should continue looping.</p>
+        <p>N/A.</p>
 
         <h3>Image to show how the simple micro interaction will work:</h3>
         <img src="images/appointments_visualization.png" class="resize">
