created alpha code build of microinteraction
got a file off codepen and manipulated it into the alpha code

--- a/alpha/index.html
+++ b/alpha/index.html
@@ -27,7 +27,7 @@
         <p>While the mouse hovers over the button it starts the microinteraction and when the mouse leaves the button the interaction stops.</p>
 
         <h3>Rules:</h3>
-        <p>While mouse hovers the button should change color and text color. A Drexel gold and navy text should work well. When mouse stops hovering it should transition back to the original color</p>
+        <p>While mouse hovers the button should change color and text color. A Drexel gold (#FFC600) and navy (#07294D) text should work well. When mouse stops hovering it should transition back to the original color</p>
 
         <h3>Feedback:</h3>
         <p>On hover the user will see the button change color seamlessly from the current blue to gold and the text color change so there is solid contrast between button color and text color. It will blend between colors over time so it isnt just one color changing to the other. </p>
@@ -39,4 +39,6 @@
         <img src="images/appointments_visualization.png" class="resize">
     </div>
 
-</body></html>
+</body>
+
+</html>
