--- a/beta/index.html
+++ b/beta/index.html
@@ -14,31 +14,31 @@
 
     <div>
         <h1>Microinteraction Beta IDM241</h1>
-        <h3>URL: (IF APPLIES)</h3>
-        <p>LORUM IPSUM</p>
+        <h3>URL:</h3>
+        <p> <a href="https://www.charleswolloch.com" target="_blank">https://www.charleswolloch.com</a></p>
 
         <h3>Current State Intro:</h3>
-        <p>LORUM IPSUM</p>
+        <p>In its current state my personal portfolio website does not contain a micro interaction within the header. Addionally it would be worth to add that on the creations page there is content related to multiple categories. My goal is to create a dropdown menu within the header that has hover effect microinteraction and seperate content into categories within that dropdown.</p>
         <h3>Current State Images:</h3>
-        <img src='#' class="resize">
-        <img src='#' class="resize">
+        <img src='images/currentstate_cw.png' class="resize">
+
 
         <h3>Triggers:</h3>
-        <p>LORUM IPSUM</p>
+        <p>Upon mouse hover over the Creations Nav button the microinteraction is triggered. Within the list another Hover effect occurs while mouse hovers over the Creations Nav tabs.</p>
 
         <h3>Rules:</h3>
-        <p>LORUM IPSUM</p>
+        <p>When mouse hovers color changes from black to grey and dropdown appears. The animation should fade in and do so over half a second. When dropdown appears user can hover over dropdown tabs. Upon hovering over the dropdown tabs the tabs change color.</p>
 
         <h3>Feedback:</h3>
-        <p>LORUM IPSUM</p>
+        <p>The user upon hovering over creations should see a color change where the mouse is hovering and alist appears beneath it. Within that list appears more options for navigation and if the user hovers over any of those tabs it will have a hover effect where the color changes too.</p>
 
         <h3>Loops and Modes</h3>
-        <p>LORUM IPSUM</p>
+        <p>If the user hovers over Creations the tabs are set to appear. The data set to show are the various content pages. When there is no hover no extra data is displayed.</p>
 
         <h3>Image to show how the simple micro interaction will work:</h3>
-        <img src="#" class="resize">
+        <img src="images/dropdown_1.png" class="resize">
+        <img src="images/dropdown_2.png" class="resize">
+        <img src="images/dropdown_3.png" class="resize">
     </div>
 
-</body>
-
-</html>
+</body></html>
