--- a/case_study/index.html
+++ b/case_study/index.html
@@ -11,14 +11,16 @@
 </head>
 
 <body>
+    <img src="images/hero.gif" class="resize">
     <br>
     <div>
+
         <h1>Microinteractions Case Study</h1>
 
-        <h3>Overview:</h3>
+        <h2>Overview:</h2>
         <p>For this project i was tasked with developing three microinteractions varying in difficulty (simple, medium, complex) for the IDM 241 Microinteractions course at Drexel University. The goal was to either improve upon existing microinteractions or create my own, in this light i improved two existing microinteractions and created a new interaction for my personal portfolio website. These projects were all developed with HTML and CSS in a timeline of 9 weeks. </p>
 
-        <h3>Context &amp; Challenge:</h3>
+        <h2>Context &amp; Challenge:</h2>
         <p>The goal of this project was to learn to identify and implement the elements required to create incredible digital experiences. Through the application of user-experience design practices, I developed enjoyable interactive designs based on a consideration of feedback and users' experience. I was free to chose what original interface i wanted to improve the only restrictions were they had to have all the characteristics from the <i>Microinteractions Model:</i> </p>
         <ul>
             <li>Triggers</li>
@@ -29,11 +31,11 @@
 
 
 
-        <h3>Process and Solutions:</h3>
+        <h2>Process and Solutions:</h2>
 
         <!-- Alpha -->
 
-        <h4>Alpha</h4>
+        <h3>Alpha</h3>
         <p>For the alpha I started off with a simple hoverstate. I noticed on the Drexel One student portal that the "schedule an appointment" button doesnt have a change in color or anything on hover. This made it an ideal candidate for a simple microinteraction. The improved microinteraction is comprised of the following: </p>
         <ul>
             <li><strong>Triggers:</strong> While the mouse hovers over the button it starts the microinteraction and when the mouse leaves the button the interaction stops.</li>
@@ -61,7 +63,7 @@
 
         <!-- Beta -->
 
-        <h4>Beta</h4>
+        <h3>Beta</h3>
         <p>For the beta I decided to improve an interaction on my personal portfolio website. In its current state my personal website does not contain a micro interaction within the header. Addionally it would be worth to add that on the creations page there is content related to multiple categories. The goal was to create a dropdown menu within the header that has a hover effect microinteraction and to seperate content into categories within that dropdown. The improved microinteraction is comprised of the following: </p>
         <ul>
             <li><strong>Triggers:</strong> Upon mouse hover over the Creations Nav button the microinteraction is triggered. Within the list another Hover effect occurs while mouse hovers over the Creations Nav tabs.</li>
@@ -98,24 +100,28 @@
         <!-- Final -->
 
         <h4>Final</h4>
-        <p>For the beta I decided to improve an interaction on my personal portfolio website. In its current state my personal website does not contain a micro interaction within the header. Addionally it would be worth to add that on the creations page there is content related to multiple categories. The goal was to create a dropdown menu within the header that has a hover effect microinteraction and to seperate content into categories within that dropdown. The improved microinteraction is comprised of the following: </p>
+        <p>For the final I decided to improve an interaction on my personal portfolio website. In its current state my personal website has a tile system for showing projects. Currently these tiles have a basic microinteraction on hover where the thumbnail image goes into grey scale. The microinteraction i propose would allow the user to hover over the project tile allowing them to see a preview of the project description. This microinteraction will be a tile flip where on hover the front of the tile flips to the back and the back of the tile flips to the front showing the user new information. The improved microinteraction is comprised of the following: </p>
         <ul>
-            <li><strong>Triggers:</strong> Upon mouse hover over the Creations Nav button the microinteraction is triggered. Within the list another Hover effect occurs while mouse hovers over the Creations Nav tabs.</li>
-            <li><strong>Rules:</strong> When mouse hovers color changes from black to grey and dropdown appears. The animation should fade in and do so over half a second. When dropdown appears user can hover over dropdown tabs. Upon hovering over the dropdown tabs the tabs change color.</li>
-            <li><strong>Feedback:</strong> The user upon hovering over creations should see a color change where the mouse is hovering and alist appears beneath it. Within that list appears more options for navigation and if the user hovers over any of those tabs it will have a hover effect where the color changes too.</li>
-            <li><strong>Loops &amp; Modes:</strong> If the user hovers over Creations the tabs are set to appear. The data set to show are the various content pages. When there is no hover no extra data is displayed.</li>
+            <li><strong>Triggers:</strong> Upon mouse hover over a tile the microinteraction is triggered. When the mouse stops hovering the microinteraction stops getting triggered.</li>
+            <li><strong>Rules:</strong> When mouse hovers the front of the tile (displaying a thumbnail image and title) flips to the back and the back of the tile (displaying a description) flips to the front. When the back of the card's content appears it is covering the front of the tiles content and the same in reverse.</li>
+            <li><strong>Feedback:</strong> The user upon hovering over a tile sees the flip animation which shows the front information of the tile flip over to reveal the back information of the tile. The user goes from seeing an image and title to the description of the project all while hovering.</li>
+            <li><strong>Loops &amp; Modes:</strong> If the user hovers over a tile the description is set to appear over the title and image. The previous information that was displayed on top moves to the bottom and the information that was on the bottom gets moved to the top. While the user continues to hover the mode continues. While there is no hover the original data is displayed.</li>
         </ul>
 
         <div class="container">
-            <img src="images/currentstate_cw.png" class="resize">
+            <img src="images/current_tile.png" class="resize">
             <p class="footText"><strong>Final Microinteraction</strong> Original</p>
         </div>
+        <div class="container">
+            <img src="images/hero.gif" class="resize">
+            <p class="footText"><strong>Final Microinteraction</strong> Redesign</p>
+        </div>
 
-        <p>The aim of this microinteraction is to show the user feedback when they are hovering over the navigation and to display information in a dropdown menu. </p>
+        <p>The aim of this microinteraction is to show the user more information about a project before they make a click and are brought to another part of the site.</p>
 
 
         <p>You can visit the build of the microinteraction here:</p>
-        <a href="#" target="_blank"><button class="button" type="button"> Final Build</button></a>
+        <a href="https://www.charleswolloch.com/idm241/final/build" target="_blank"><button class="button" type="button"> Final Build</button></a>
 
         <hr>
     </div>
