replaced image w gif

--- a/final/index.html
+++ b/final/index.html
@@ -37,8 +37,7 @@
         <p>If the user hovers over a tile the description is set to appear over the title and image. The previous information that was displayed on top moves to the bottom and the information that was on the bottom gets moved to the top. While the user continues to hover the mode continues. While there is no hover the original data is displayed.</p>
 
         <h3>Image to show how the simple micro interaction will work:</h3>
-        <img src="images/tileflip1.png" class="resize">
-        <img src="images/tileflip2.png" class="resize">
+        <img src="images/hero.gif" class="resize">
     </div>
 
 </body></html>
