updated case study text and finished

--- a/case_study/index.html
+++ b/case_study/index.html
@@ -124,6 +124,9 @@
         <a href="https://www.charleswolloch.com/idm241/final/build" target="_blank"><button class="button" type="button"> Final Build</button></a>
 
         <hr>
+
+        <h2>Results:</h2>
+        <p>These projects were succesful in adding to my current understanding of the creation and implementation of microinteractions into my own web development projects. This course added to my current skills of finding and manipulating code and added a concrete foundation to the implementation of such code in past and future projects.</p>
     </div>
 
 </body></html>
